Added docu for /meeting endpoints
